--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
-  <b>2015-12-27</b> Russian Wikipedia 2015-12 updates released<br/>
+  <b>2015-12-27</b> Russian wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
     </li>
