--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,41 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_XOWA_.28None.29.3B_XOWA_Android_.28v0.1.2.0.29_.282016-01-10_20:30_Sun.29">Release: XOWA (None); XOWA Android (v0.1.2.0) (2016-01-10 20:30 Sun)</span>
+    </h2>
+    <p>
+      There's no release for the XOWA app tonight. I've spent the week mostly on the Android app, and there were no real changes for the main desktop app.
+    </p>
+    <p>
+      I have released an Alpha of the XOWA Android App. You should check the following links:
+    </p>
+    <ul>
+      <li>
+        Android progress thread: <a href="https://github.com/gnosygnu/xowa/issues/36" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/36</a>
+      </li>
+      <li>
+        Main Github repo (source): <a href="https://github.com/gnosygnu/xowa_android" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa_android</a>
+      </li>
+      <li>
+        Releases page (apk): <a href="https://github.com/gnosygnu/xowa_android/releases/tag/v0.1.2.0" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa_android/releases/tag/v0.1.2.0</a>
+      </li>
+      <li>
+        Simple Wikipedia Android dump: <a href="https://archive.org/details/Xowa_simplewiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_simplewiki_latest</a>
+      </li>
+    </ul>
+    <p>
+      If you have an Android app, I'd be greatly interested in feedback. See the Android progress thread for more details.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Next_release:_v3.1.3">Next release: v3.1.3</span>
+    </h3>
+    <p>
+      I still have some tasks for XOWA Android that I'd like to work on this week. I am going to try to release the main app next week, but if there are no new changes it may slip again in favor of an update of the XOWA Android release
+    </p>
+    <p>
+      I haven't generated any wikis this week as the dump service seems to have come to a halt. Whenever it resumes, I'll pick up again with the promised updates of French, Polish and Greek
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v3.1.1.1_.282016-01-03_20:00_Sun.29">Release: v3.1.1.1 (2016-01-03 20:00 Sun)</span>
     </h2>
     <p>
