--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
       </li>
     </ul>
     <p>
-      If you have an Android app, I'd be greatly interested in feedback. See the Android progress thread for more details.
+      If you have Android KitKat or higher and would like to run XOWA on it, I'd be greatly interested in feedback. See the Android progress thread for more details.
     </p>
     <h3>
       <span class="mw-headline" id="Next_release:_v3.1.3">Next release: v3.1.3</span>
