--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,50 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_v3.1.3.1_.282016-01-17_21:45_Sun.29">Release: v3.1.3.1 (2016-01-17 21:45 Sun)</span>
+    </h2>
+    <p>
+      The desktop app is a trivial release. Its main feature is a help page for generating HTML-dumps
+    </p>
+    <p>
+      The Android app is a major release. It has a Random feature, shows more images, and adds CSS-tweaks.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Documentation_for_html-dump_script._See_Help:Import.2FCommand-line.2FDumps">Documentation for html-dump script. See <a href="/wiki/Help:Import/Command-line/Dumps" id="xolnki_11" title="Help:Import/Command-line/Dumps">Help:Import/Command-line/Dumps</a></span>
+    </h3>
+    <p>
+      This item is self-explanatory. The XOWA Android app is getting more stable, so I felt it would be time to document the generation of the HTML databases.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Improved_Android_beta.2C_including_Random.2C_more_image_display_and_CSS-tweaks._See_https:.2F.2Fgithub.com.2Fgnosygnu.2Fxowa.2Fissues.2F36">Improved Android beta, including Random, more image display and CSS-tweaks. See <a href="https://github.com/gnosygnu/xowa/issues/36" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/36</a></span>
+    </h3>
+    <p>
+      This build has a number of new features.
+    </p>
+    <ul>
+      <li>
+        Random now works in offline mode.
+      </li>
+      <li>
+        All thumb and gallery images should now show up. (approximately 5% of them weren't before)
+      </li>
+      <li>
+        CSS tweaks were added to center the images as well as standardize some background colors
+      </li>
+    </ul>
+    <p>
+      You can get the latest release here: <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
+    </p>
+    <h3>
+      <span class="mw-headline" id="Next_release:_v3.1.4">Next release: v3.1.4</span>
+    </h3>
+    <p>
+      The Wikimedia dump service resumed, but I'd like to delay French, Polish and Latin for another week. I'm planning to generate HTML dumps for the rest of the English wikis including Wiktionary, Wikisource, Wikivoyage, etc. This will be a good stress test for the new XOWA html-dump format before I continue on to other wikis.
+    </p>
+    <p>
+      I'm also going to continue tweaking the XOWA Android app. If you have a moment to help out with testing, please set it up and give me some feedback: <a href="https://github.com/gnosygnu/xowa/issues/36" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/36</a>
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_XOWA_.28None.29.3B_XOWA_Android_.28v0.1.2.0.29_.282016-01-10_20:30_Sun.29">Release: XOWA (None); XOWA Android (v0.1.2.0) (2016-01-10 20:30 Sun)</span>
     </h2>
     <p>
