--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-01-17</b> Android app beta released<br/>
+  <ul>
+    <li> <a href="https://github.com/gnosygnu/xowa/issues/36" class="external text" rel="nofollow">Android app instructions</a>
+    </li>
+  </ul>
+
   <b>2015-12-27</b> Russian wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
