--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,104 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_v3.1.4.1_.282016-01-24_19:30_Sun.29">Release: v3.1.4.1 (2016-01-24 19:30 Sun)</span>
+    </h2>
+    <p>
+      The desktop app is a major release. It resolves several wiktionary errors on non-English pages and has better HTML dump generation for other wikis.
+    </p>
+    <p>
+      The Android app is a major release. It has a more responsive search, instant image loading when reloading page, and a fix for pages failing to load if they have spaces and colons in the title.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Scribunto_.2F_Luaj_fixes_for_English_Wiktionary">Scribunto / Luaj fixes for English Wiktionary</span>
+    </h3>
+    <p>
+      There were several dozen pages with script errors in English Wiktionary. They basically fell into these categories:
+    </p>
+    <ul>
+      <li>
+        Luaj / Scribunto errors with MCBS entities in Asian languages (1 glyph; 2 char).
+      </li>
+      <li>
+        Programmatic errors for minor cases 
+        <ul>
+          <li>
+            Recursive gsub calls with lua function
+          </li>
+          <li>
+            Search position returned as int not string
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <p>
+      The build log for English Wiktionary looks a lot cleaner now, though I still have to add some support for the {{categorytree}} function.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Better_HTML_dump_generation_for_English_Wiktionary.2C_Wikisource.2C_Wikiquote.2C_etc._Also.2C_French_Wikipedia">Better HTML dump generation for English Wiktionary, Wikisource, Wikiquote, etc. Also, French Wikipedia</span>
+    </h3>
+    <p>
+      I ran the HTML dump generator through all the English wikis, as well as French Wikipedia. The results looked good, but there were a lot of log errors that were addressed with this release.
+    </p>
+    <h3>
+      <span class="mw-headline" id=".28Android.29_More_responsive_search">(Android) More responsive search</span>
+    </h3>
+    <p>
+      Search is still slow on Android. I'll fix this in a future relase, but I'll have to change the format of the search databases.
+    </p>
+    <p>
+      In the interim, I hacked in the following approach. Assume a search term of "Earth":
+    </p>
+    <ul>
+      <li>
+        Search for titles that match the term. For example, "Earth". This is fast and usually comes back in 0 - 3 seconds.
+      </li>
+      <li>
+        Search for titles that have the term in any word within the title. For example, "History of Earth". This is moderate and usually comes back in 5 - 10 seconds.
+      </li>
+      <li>
+        Search for titles that have the term starting in any word within the title. For example, "Earthquake". This is slow and usually takes 15 seconds and sometimes more.
+      </li>
+    </ul>
+    <h3>
+      <span class="mw-headline" id=".28Android.29_Instant_image_loading_when_reloading_page">(Android) Instant image loading when reloading page</span>
+    </h3>
+    <p>
+      First, some background. XOWA loads pages in two stages:
+    </p>
+    <ul>
+      <li>
+        Show the HTML
+      </li>
+      <li>
+        Fill in the images one by one
+      </li>
+    </ul>
+    <p>
+      The 2nd stage is necessary because it takes a few tenths of a second to retrieve an image from the database. For large pages (20+ images), this would delay page load by a few seconds (for example: 20 images * .2 second = 4 seconds).
+    </p>
+    <p>
+      However, once a page is viewed, reloading a page shouldn't have to re-retrieve the image from the database. The previous releases were actually re-retrieving the image. This release just uses the image if it's already there.
+    </p>
+    <h3>
+      <span class="mw-headline" id=".28Android.29_Fix_for_pages_failing_to_load_if_they_have_spaces_and_colons_in_the_title">(Android) Fix for pages failing to load if they have spaces and colons in the title</span>
+    </h3>
+    <p>
+      This only affects a small minority of items that have a colon and spaces in the title. For example, "List of A:B items". XOWA didn't load this page because the underlying Wikipedia Mobile App was encoding the spaces as +.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Next_release:_v3.1.5">Next release: v3.1.5</span>
+    </h3>
+    <p>
+      I haven't uploaded wikis this week, because I'm working on a blocking item in Wikivoyage (Pagebanner). I'm going to delay another week and focus on updating 2016-01-13 English Wikipedia. This means a new HTML dump which should be available by next Sunday. I'm also hoping to upload the other English wikis, and then continue on to French, etc.
+    </p>
+    <p>
+      Meanwhile, I'm going to delay the Google Play Store a few weeks. If anyone thinks I should go to Google Play Store earlier, please let me know. From my side, there are a number of items that still need polish. If you have any feedback, please do post in <a href="https://github.com/gnosygnu/xowa/issues/36" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/36</a> I'd appreciate anything: from "Works fine" to "This feature needs some more work".
+    </p>
+    <p>
+      Finally, if you have an Android device and want a wiki for your device, let me know which, and I'll bump it up in priority. The next items in queue are French, German, Chinese and Arabic Wikipedia. I'll get to all the wikis but it may take a few months unless I hear requests otherwise.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v3.1.3.1_.282016-01-17_21:45_Sun.29">Release: v3.1.3.1 (2016-01-17 21:45 Sun)</span>
     </h2>
     <p>
