--- a/download.html
+++ b/download.html
@@ -21,67 +21,70 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_windows_64_v3.1.3.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_windows_64_v3.1.4.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_windows_v3.1.3.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_windows_v3.1.4.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_linux_64_v3.1.3.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_linux_64_v3.1.4.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_linux_v3.1.3.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_linux_v3.1.4.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_macosx_64_v3.1.3.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_macosx_64_v3.1.4.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_macosx_v3.1.3.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_macosx_v3.1.4.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
-<h2><span class='mw-headline' id='Android'> Android (beta) </span></h2>
+<h2><span class='mw-headline' id='Android'> Android </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.3.1/xowa_app_android_v3.1.3.2.apk" class="external text" rel="nofollow">Android</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_android_v3.1.4.2.apk" class="external text" rel="nofollow">Android</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.1.3.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.1.4.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
+<h2><span class='mw-headline' id='Source'> Source code (Android)</span></h2>
+<ul>
+  <li> <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" class="external text" rel="nofollow">Source code</a>
+  </li>
+</ul>
 <br/>
     <h2>
       <span class='mw-headline'>Change log</span>
     </h2>
     <h2>
-      <span class="mw-headline" id="v3.1.3.1_.282016-01-17.29">v3.1.3.1 (2016-01-17)</span>
+      <span class="mw-headline" id="v3.1.4.1_.282016-01-24.29">v3.1.4.1 (2016-01-24)</span>
     </h2>
     <h3>
-      <span class="mw-headline" id="Desktop">Desktop</span>
+      <span class="mw-headline" id="PC">Windows / Linux / Mac OS X</span>
     </h3>
     <p>
-      <b>add</b>
+      <b>major</b>
     </p>
     <ul>
       <li>
-        Command-line: Expand instructions for generating HTML dumps. See: [[Help:Import/Command-line/Dumps]]
-      </li>
-    </ul>
-    <p>
-      <b>significant</b>
-    </p>
-    <ul>
-      <li>
-        Import: Delete broken page redirects when importing wiki in dansguardian.
+        Luaj: Return position as int not string when using "()" regex (resolves script error on several dozen en.d / ru.d pages ("attempt to compare string with number expected, got string")). See: <a href="https://en.wiktionary.org/wiki/%D0%BA">https://en.wiktionary.org/wiki/к</a> <a href="https://en.wiktionary.org/wiki/%D0%BA%D0%B0%D0%B3%D0%B5%D0%B1%D0%B5%D1%88%D0%BD%D0%B8%D0%BA">https://en.wiktionary.org/wiki/кагебешник</a> <a href="https://ru.wiktionary.org/wiki/плавлавка" rel="nofollow" class="external free">https://ru.wiktionary.org/wiki/плавлавка</a>
       </li>
       <li>
-        Html: Show info.png and play.png from css, not HTML. See: <a href="https://en.wikipedia.org/wiki/Piano">https://en.wikipedia.org/wiki/Piano</a>
+        Scribunto: Handle nested gsub calls when using callback functions (resolves script error on a few dozen en.d pages ("Unrecognized 3ms suffix pattern.")). See: <a href="https://en.wiktionary.org/wiki/%D7%9B%D7%9C%D7%91">https://en.wiktionary.org/wiki/כלב</a>
+      </li>
+      <li>
+        Luaj: Handle multi-byte chars in lua variables (resolves script error on a few dozen en.d pages ("attempt to concatenate nil and string")). See: <a href="https://en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
+      </li>
+      <li>
+        Hzip: Handle jtidy moving &lt;span class='headline'&gt; outside of &lt;h#&gt; tag in rare combination of &lt;center&gt;, &lt;span&gt;, &lt;div&gt; (resolves a few dozen pages in en.s not showing). See: <a href="https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text" rel="nofollow" class="external free">https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text</a> <a href="https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1</a>
       </li>
     </ul>
     <p>
@@ -89,10 +92,19 @@
     </p>
     <ul>
       <li>
-        Gallery: Ignore items with invalid file titles; EX:&lt;gallery&gt;File:#A.png&lt;/gallery&gt;.
+        Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="https://en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
-        Url: Output "" instead of "file:///" if src is unknown.
+        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: [[Help:Diagnostics/Scribunto/Luaj]]
+      </li>
+      <li>
+        Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
+      </li>
+      <li>
+        Xtns.Dpl: Encode quotes in href title (resolves broken links if page title has quotes). See: <a href="https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books</a>
+      </li>
+      <li>
+        Dumps.HTML: Add support for non-english File namespace (resolves many log messages when generating html dumps for non-english wikis).
       </li>
     </ul>
     <p>
@@ -100,61 +112,43 @@
     </p>
     <ul>
       <li>
-        Parser.Lnki: Title-case page if link argument has xwiki alias to same wiki; EX:[[File:A.png|link=en:Help:a]] -&gt; "Help:A" x&gt; "Help:a". See: <a href="https://en.wikipedia.org/wiki/Wikipedia:Teahouse/Guest_book/Archive_5">https://en.wikipedia.org/wiki/Wikipedia:Teahouse/Guest_book/Archive_5</a>
+        Hzip: Write file-title with correct case-sensitivity for wikis with a case-sensitive [[File:]] namespace.
+      </li>
+      <li>
+        Html: Never change title bytes when passed to Xof_file_wkr_.Ttl_standardize(title) (nothing known in pc; affects hzip check for image links). See: <a href="https://en.wiktionary.org/wiki/freedom_of_speech">https://en.wiktionary.org/wiki/freedom_of_speech</a>
+      </li>
+    </ul>
+    <p>
+      <b>doc</b>
+    </p>
+    <ul>
+      <li>
+        Home: Redefine categories for Change log.
       </li>
     </ul>
     <h3>
       <span class="mw-headline" id="Android">Android</span>
     </h3>
     <p>
-      <b>fix</b>
+      <b>major</b>
     </p>
     <ul>
       <li>
-        Setup: Do not write log to SD card {detected by anonymous}.
+        Search: Do additional searches to return some results sooner.
+      </li>
+      <li>
+        Image: Load images directly in html if page has already been viewed.
+      </li>
+      <li>
+        Url: Convert plus to space (affects pages not loading if canonical_url has plus for space). See: <a href="https://en.wikipedia.org/wiki/List_of_Fire_Emblem:Shadow_Dragon_characters">https://en.wikipedia.org/wiki/List_of_Fire_Emblem:Shadow_Dragon_characters</a>
+      </li>
+      <li>
+        App: Add "send email" to crash reporting.
       </li>
     </ul>
     <p>
-      <b>add</b>
+      <br>
     </p>
-    <ul>
-      <li>
-        Special: Implement random.
-      </li>
-    </ul>
-    <p>
-      <b>change</b>
-    </p>
-    <ul>
-      <li>
-        Html: Show video thumbs. See: <a href="https://en.wikipedia.org/wiki/Lepidoptera">https://en.wikipedia.org/wiki/Lepidoptera</a>
-      </li>
-      <li>
-        Html: Show images from imageMap (available in next English Wikipedia release). See: <a href="https://en.wikipedia.org/wiki/Australia">https://en.wikipedia.org/wiki/Australia</a>
-      </li>
-      <li>
-        Html: Show images from fake-thumb divs. See: <a href="https://en.wikipedia.org/wiki/List_of_counties_in_New_York">https://en.wikipedia.org/wiki/List_of_counties_in_New_York</a>
-      </li>
-      <li>
-        Css: Change background-color to black for infobox / wikitable in night-mode {detected by anonymous} {detected by anonymous}. See: <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
-      </li>
-    </ul>
-    <p>
-      <b>significant</b>
-    </p>
-    <ul>
-      <li>
-        Html: Center gallery images.
-      </li>
-    </ul>
-    <p>
-      <b>minor</b>
-    </p>
-    <ul>
-      <li>
-        Html: Change background color to transparent for Portal divs. See: <a href="https://en.wikipedia.org/wiki/Australia">https://en.wikipedia.org/wiki/Australia</a>
-      </li>
-    </ul>
     
 <!-- page_end -->
     </div>
