--- a/image_dbs.html
+++ b/image_dbs.html
@@ -119,17 +119,17 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-06-02
+            2015-12-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-06-21
+            2015-12-24
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -144,12 +144,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_core.7z" class="external text" rel="nofollow">wiki.core</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_text_ns-000_part-1.7z" class="external text" rel="nofollow">wiki.main articles.part-1</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_text_ns-000_part-2.7z" class="external text" rel="nofollow">wiki.main articles.part-2</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_text_ns-100.7z" class="external text" rel="nofollow">wiki.other articles</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_xtn_search.7z" class="external text" rel="nofollow">wiki.search</a><br>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_xtn_category.7z" class="external text" rel="nofollow">wiki.category</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_core.7z" rel="nofollow" class="external text">wiki.core</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_text_ns-000_part-1.7z" rel="nofollow" class="external text">wiki.main articles.part-1</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_text_ns-000_part-2.7z" rel="nofollow" class="external text">wiki.main articles.part-2</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_text_ns-100.7z" rel="nofollow" class="external text">wiki.other articles</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_xtn_search.7z" rel="nofollow" class="external text">wiki.search</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_wiki_xtn_category.7z" rel="nofollow" class="external text">wiki.category</a>
           </p>
         </td>
       </tr>
