--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
       <span class="mw-headline" id="Scribunto_fixes_for_2016-01-13_English_Wikipedia">Scribunto fixes for 2016-01-13 English Wikipedia</span>
     </h3>
     <p>
-      I accidentally had the wrong dump in place when kicking off the 2016-01-13 build. As such, I didn't spot the issue till this morning after I restarted the build started.
+      I accidentally had the wrong dump in place when kicking off the 2016-01-13 build. As such, I didn't spot the issue till this morning after I restarted the build.
     </p>
     <p>
       Basically, the <a href="https://dumps.wikimedia.org/enwiki/20160113/" rel="nofollow" class="external text">2016-01-13 English Wikipedia dump</a> introduced new page admininistration functions. These include {{PROTECTIONEXPIRY}} as well as a Scribunto function called getStabilitySettings. This resulted in a bold red "Script error" message at the top of every protected page. There are a lot of protected pages.
